--- a/index.html
+++ b/index.html
@@ -33,24 +33,29 @@
         </nav>
     </header>
 
-    <main>
+    <main class="main-home">
         <div class="intro">
-            <h1>Mike Olivotto</h1>
-            <h2>Full Stack Web Developer from Sydney, Australia</h2>
+            <h1 id="homeh1">Mike Olivotto</h1>
+            <h2 id="homeh2">Full Stack Web Developer from Sydney, Australia</h2>
         </div>
     </main>
 
     <footer>
-        <a href="">
-            <div class="footer-icons" aria-label="LinkedIn"><i class="fab fa-linkedin"></i></div>
+        <a href="https://www.linkedin.com/in/mikeolivotto/">
+          <div class="footer-icons" aria-label="LinkedIn">
+            <i class="fab fa-linkedin"></i>
+          </div>
         </a>
-        <a href="">
-            <div class="footer-icons" aria-label="GitHub"><i class="fab fa-github"></i></div>
+        <a href="https://github.com/mikeolivotto">
+          <div class="footer-icons" aria-label="GitHub">
+            <i class="fab fa-github"></i>
+          </div>
         </a>
-        <a href="">
-            <div class="footer-icons"aria-label="CodePen"><i class="fab fa-codepen"></i></div>
+        <a href="https://codepen.io/mike-olivotto">
+          <div class="footer-icons" aria-label="CodePen">
+            <i class="fab fa-codepen"></i>
+          </div>
         </a>
-    </footer>
-
+      </footer>
 </body>
 </html>
