Set target to _blank for external links

--- a/about.html
+++ b/about.html
@@ -49,7 +49,7 @@
           Technology and the digital world is where I'm most comfortable. Continuous learning and development to build customised tools and improve processes is my modus operandi. I'm currently studying Web Development, complementing my work in SEO, and I plan to use these skills to create unique projects and develop custom solutions.
         </p>
         <p>
-          Contact me on <a href="https://www.linkedin.com/in/mikeolivotto/">LinkedIn</a>, follow me on <a href="https://github.com/mikeolivotto">GitHub</a>, or check our some of my <a href="projects.html">projects</a>.
+          Contact me on <a href="https://www.linkedin.com/in/mikeolivotto/" target="_blank">LinkedIn</a>, follow me on <a href="https://github.com/mikeolivotto" target="_blank">GitHub</a>, or check our some of my <a href="projects.html">projects</a>.
         </p>
       </div>
 
@@ -69,17 +69,17 @@
     </main>
 
     <footer>
-      <a href="https://www.linkedin.com/in/mikeolivotto/">
+      <a href="https://www.linkedin.com/in/mikeolivotto/" target="_blank">
         <div class="footer-icons" aria-label="LinkedIn">
           <i class="fab fa-linkedin"></i>
         </div>
       </a>
-      <a href="https://github.com/mikeolivotto">
+      <a href="https://github.com/mikeolivotto" target="_blank">
         <div class="footer-icons" aria-label="GitHub">
           <i class="fab fa-github"></i>
         </div>
       </a>
-      <a href="https://codepen.io/mike-olivotto">
+      <a href="https://codepen.io/mike-olivotto" target="_blank">
         <div class="footer-icons" aria-label="CodePen">
           <i class="fab fa-codepen"></i>
         </div>
