--- a/index.html
+++ b/index.html
@@ -41,17 +41,17 @@
     </main>
 
     <footer>
-        <a href="https://www.linkedin.com/in/mikeolivotto/">
+        <a href="https://www.linkedin.com/in/mikeolivotto/" target="_blank">
           <div class="footer-icons" aria-label="LinkedIn">
             <i class="fab fa-linkedin"></i>
           </div>
         </a>
-        <a href="https://github.com/mikeolivotto">
+        <a href="https://github.com/mikeolivotto" target="_blank">
           <div class="footer-icons" aria-label="GitHub">
             <i class="fab fa-github"></i>
           </div>
         </a>
-        <a href="https://codepen.io/mike-olivotto">
+        <a href="https://codepen.io/mike-olivotto" target="_blank">
           <div class="footer-icons" aria-label="CodePen">
             <i class="fab fa-codepen"></i>
           </div>
