Update about me info

--- a/about.html
+++ b/about.html
@@ -46,7 +46,7 @@
           I'm a full stack web developer from Sydney, Australia. I started off coding in HTML and CSS over 15 years ago and have spent the better part of a decade in digital marketing, specialising in Search Engine Optimisation and website management.
         </p>      
         <p class=""></p>
-          Technology and the digital world is where I'm most comfortable. Continuous learning and development to build customised tools and improve processes is my modus operandi. I'm currently studying Web Development, complementing my work in SEO, and I plan to use these skills to create unique projects and develop custom solutions.
+          Technology and the digital world is where I'm most comfortable. Continuous learning and development is my modus operandi. I'm currently studying Web Development, complementing my work in SEO, and I'm excited to build web applications.
         </p>
         <p>
           Contact me on <a href="https://www.linkedin.com/in/mikeolivotto/" target="_blank">LinkedIn</a>, follow me on <a href="https://github.com/mikeolivotto" target="_blank">GitHub</a>, or check our some of my <a href="projects.html">projects</a>.
