Add projects page & scss partials

--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
 
     <!-- NEED TO ADD SRI -->
     <link rel="stylesheet" type="text/css" href="css/main.css" />
-    <title>Mike Olivotto - Web Developer</title>
+    <title>About - Mike Olivotto</title>
   </head>
   <body>
     <header>
