add work experience and resume pdf

--- a/about.html
+++ b/about.html
@@ -46,16 +46,51 @@
           I'm a full stack web developer from Sydney, Australia. I started off coding in HTML and CSS over 15 years ago and have spent the better part of a decade in digital marketing, specialising in Search Engine Optimisation and website management.
         </p>      
         <p class=""></p>
-          Technology and the digital world is where I'm most comfortable. Continuous learning and development is my modus operandi. I'm currently studying Web Development, complementing my work in SEO, and I'm excited to build web applications.
+          Technology and the digital world is where I'm most comfortable. Continuous learning and development is my modus operandi. I'm currently studying Web Development, complementing my work in SEO, and I'm most interested in building interactive web applications.
         </p>
         <p>
           Contact me on <a href="https://www.linkedin.com/in/mikeolivotto/" target="_blank">LinkedIn</a>, follow me on <a href="https://github.com/mikeolivotto" target="_blank">GitHub</a>, or check our some of my <a href="projects.html">projects</a>.
         </p>
       </div>
 
-      <div>
+      <div class="experience col-s-12">
+        <h2>Professional Experience</h2>
+        <p>For a comprehensive work history, <a href="files/mike-olivotto-resume.pdf">download my resume</a> in PDF.</p>
+        <div class="work-exp">
+          <div class="job">
+            <h3>SEO Consultant</h3>
+            <p class="company">Online Marketing Gurus</p>
+            <p>July 2020 - Present</p>
+          </div>
+          <div class="job">
+            <h3>Digital Marketing Advisor</h3>
+            <p class="company">Hopsters Cooperative Brewery</p>
+            <p>April 2018 - April 2021</p>
+          </div>
+          <div class="job">
+            <h3>Digital Marketing Manager</h3>
+            <p class="company">Entire Travel Group</p>
+            <p>October 2017 - March 2020</p>
+          </div>
+          <div class="job">
+            <h3>Channel Manager & Marketing Specialist</h3>
+            <p class="company">BroadbandTV</p>
+            <p>March 2015 - August 2017</p>
+          </div>
+          <div class="job">
+            <h3>Account Manager</h3>
+            <p class="company">Salmat Digital</p>
+            <p>July 2009 - May 2014</p>
+          </div>
+        </div>
+        
+      </div>   
+
+      <!-- This div is used as a line break, to push the following div to the next row -->
+      <div class="break"></div>
+
+      <div class="skills col-s-12">
         <h2>Skills</h2>
-        <i class="fab fa-git-alt"></i>
         <ul>
           <li><i class="fab fa-html5"></i> HTML</li>
           <li><i class="fab fa-css3-alt"></i> CSS</li>
