add blog & update footer

--- a/about.html
+++ b/about.html
@@ -40,13 +40,13 @@
       <div>
         <img src="img/mike-olivotto.jpg" alt="Mike Olivotto" class="col-3" id=""/> 
         <p class="">
-          Hi! I'm Mike.
+          Hi! I'm Mike. 👋
         </p>
         <p class="">
           I'm a full stack web developer from Sydney, Australia. I started off coding in HTML and CSS over 15 years ago and have spent the better part of a decade in digital marketing, specialising in Search Engine Optimisation and website management.
         </p>      
         <p class=""></p>
-          Technology and the digital world is where I'm most comfortable. Continuous learning and development is my modus operandi. I'm currently studying Web Development, complementing my work in SEO, and I'm most interested in building interactive web applications.
+          Technology and the digital world is where I'm most comfortable. Continuous learning and development is my modus operandi. I'm currently studying Web Development and I'm most interested in building interactive web applications.
         </p>
         <p>
           Contact me on <a href="https://www.linkedin.com/in/mikeolivotto/" target="_blank">LinkedIn</a>, follow me on <a href="https://github.com/mikeolivotto" target="_blank">GitHub</a>, or check our some of my <a href="projects.html">projects</a>.
@@ -55,7 +55,7 @@
 
       <div class="experience col-s-12">
         <h2>Professional Experience</h2>
-        <p>For a comprehensive work history, <a href="files/mike-olivotto-resume.pdf">download my resume</a> in PDF.</p>
+        <p>For a comprehensive work history, <a href="files/mike-olivotto-resume.pdf">download my resume</a> (PDF).</p>
         <div class="work-exp">
           <div class="job">
             <h3>SEO Consultant</h3>
@@ -98,27 +98,30 @@
           <li><i class="fab fa-python"></i> Python</li>
           <li><i class="fab fa-sass"></i> Sass</li>
           <li><i class="fas fa-code-branch"></i> Git & GitHub</li>
-          <li><i class="fas fa-terminal"></i> Command Line</li>
+          <li><i class="fas fa-terminal"></i> Command Line (lol h4X0r)</li>
         </ul>
       </div>
     </main>
 
     <footer>
-      <a href="https://www.linkedin.com/in/mikeolivotto/" target="_blank">
-        <div class="footer-icons" aria-label="LinkedIn">
-          <i class="fab fa-linkedin"></i>
-        </div>
-      </a>
-      <a href="https://github.com/mikeolivotto" target="_blank">
-        <div class="footer-icons" aria-label="GitHub">
-          <i class="fab fa-github"></i>
-        </div>
-      </a>
-      <a href="https://codepen.io/mike-olivotto" target="_blank">
-        <div class="footer-icons" aria-label="CodePen">
-          <i class="fab fa-codepen"></i>
-        </div>
-      </a>
+
+        <a href="https://www.linkedin.com/in/mikeolivotto/" target="_blank">
+          <div class="footer-icons" aria-label="LinkedIn">
+            <i class="fab fa-linkedin"></i>
+          </div>
+        </a>
+        <a href="https://github.com/mikeolivotto" target="_blank">
+          <div class="footer-icons" aria-label="GitHub">
+            <i class="fab fa-github"></i>
+          </div>
+        </a>
+        <a href="https://codepen.io/mike-olivotto" target="_blank">
+          <div class="footer-icons" aria-label="CodePen">
+            <i class="fab fa-codepen"></i>
+          </div>
+        </a>
+        <div> | mike@mikeolivotto.com</div>
+
     </footer>
   </body>
 </html>
