--- a/projects.html
+++ b/projects.html
@@ -86,6 +86,7 @@
           <i class="fab fa-codepen"></i>
         </div>
       </a>
+      <div> | mike@mikeolivotto.com</div>
     </footer>
   </body>
 </html>
