--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
             <i class="fab fa-codepen"></i>
           </div>
         </a>
+        <div> | mike@mikeolivotto.com</div>
       </footer>
 </body>
 </html>
