--- a/about.html
+++ b/about.html
@@ -38,6 +38,7 @@
 
     <main class="main-about">
       <div>
+        <!-- My profile image -->
         <img src="img/mike-olivotto.jpg" alt="Mike Olivotto" class="col-3" id=""/> 
         <p class="">
           Hi! I'm Mike. 👋
