--- a/blog.html
+++ b/blog.html
@@ -38,6 +38,7 @@
 
     <main class="main-blog col-s-9 col-8">
       <div class="blog">
+        <!-- blog thumbnail image. Repeated for each blog item on the page -->
         <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/66/SMPTE_Color_Bars.svg/1200px-SMPTE_Color_Bars.svg.png" alt="" class="blog-thumb">
         <h3>Sample Blog 1</h3>
         <p class="date-pub">Date published: XX/XX/2021</p>
