--- a/projects.html
+++ b/projects.html
@@ -39,6 +39,7 @@
     <main class="main-projects">
       <a href="https://codepen.io/mike-olivotto/full/rNxrEYO" target="_blank">
         <div class="project">
+          <!-- Project image below. Replicated for every 'project' element -->
           <img
             src="img/quote-gen.png"
             alt="Random Seinfeld Quote Generator"
