Refactor common css from partials into main css file

--- a/about.html
+++ b/about.html
@@ -36,7 +36,7 @@
       <h1>About me</h1>
     </header>
 
-    <main class="main-about">
+    <main class="main-about  col-s-9 col-8">
       <div>
         <img src="img/mike-olivotto.jpg" alt="Mike Olivotto" class="col-3" id=""/> 
         <p class="">
