Update css styling for links

--- a/about.html
+++ b/about.html
@@ -54,9 +54,9 @@
         </p>
       </div>
 
-      <div class="experience col-s-12">
+      <div class="experience col-s-12 col-8">
         <h2>Professional Experience</h2>
-        <p>For a comprehensive work history, <a href="files/mike-olivotto-resume.pdf">download my resume</a> (PDF).</p>
+        <p id="resume">For a comprehensive work history, <a href="files/mike-olivotto-resume.pdf">download my resume</a> (PDF).</p>
         <div class="work-exp">
           <div class="job">
             <h3>SEO Consultant</h3>
@@ -88,9 +88,9 @@
       </div>   
 
       <!-- This div is used as a line break, to push the following div to the next row -->
-      <div class="break"></div>
+      <!-- <div class="break"></div> -->
 
-      <div class="skills col-s-12">
+      <div class="skills col-s-12 col-3">
         <h2>Skills</h2>
         <ul>
           <li><i class="fab fa-html5"></i> HTML</li>
