Update link styling and project intro text

--- a/projects.html
+++ b/projects.html
@@ -37,6 +37,12 @@
     </header>
 
     <main class="main-projects">
+
+        <div id="project-intro">
+          <p>Below is a sample of some of the many projects I have built.<p>
+            <p>To see more of my work, visit my GitHub or CodePen pages</p>
+        </div>
+
       <a href="https://codepen.io/mike-olivotto/full/rNxrEYO" target="_blank">
         <div class="project">
           <!-- Project image below. Replicated for every 'project' element -->
