Add portfolio to project page

--- a/about.html
+++ b/about.html
@@ -56,7 +56,7 @@
 
       <div class="experience col-s-12 col-8">
         <h2>Professional Experience</h2>
-        <p id="resume">For a comprehensive work history, <a href="files/mike-olivotto-resume.pdf">download my resume</a> (PDF).</p>
+        <p id="resume">For a comprehensive work history, <a href="files/mike-olivotto-resume.pdf" download>download my resume</a> (PDF).</p>
         <div class="work-exp">
           <div class="job">
             <h3>SEO Consultant</h3>
