--- a/projects.html
+++ b/projects.html
@@ -69,12 +69,18 @@
         </div>
       </a>
       
-      <div class="project">
-        <img
-          src="https://www.gannett-cdn.com/presto/2021/02/08/USAT/d7ff7c62-137b-4a0c-a534-afd22d62191c-90s_tab_NIRVANA.JPG"
-          alt=""
-        />
-      </div>
+      <a href="#" target="_blank">
+        <div class="project">
+          <img
+            src="img/portfolio.jpg"
+            alt="Personal portfolio"
+          />
+          <div class="project-name">This portfolio!</div>
+          <div class="overlay">
+            <p>A personal portfolio page built in HTML and CSS/SCSS, deployed to Netlify</p>
+          </div>
+        </div>
+      </a>
     </main>
 
     <footer>
