Comment HTML and CSS for clarity

--- a/about.html
+++ b/about.html
@@ -40,6 +40,7 @@
       <div>
         <!-- My profile image -->
         <img src="img/mike-olivotto.jpg" alt="Mike Olivotto" class="col-3" id=""/> 
+        <!-- Main section for the about-me introductory blurb -->
         <p class="">
           Hi! I'm Mike. 👋
         </p>
@@ -55,6 +56,7 @@
       </div>
 
       <div class="experience col-s-12 col-8">
+        <!-- Outline of my professional experience, with sub-headers for each new job, and p tags for company and dates -->
         <h2>Professional Experience</h2>
         <p id="resume">For a comprehensive work history, <a href="files/mike-olivotto-resume.pdf" download>download my resume</a> (PDF).</p>
         <div class="work-exp">
@@ -88,9 +90,9 @@
       </div>   
 
       <!-- This div is used as a line break, to push the following div to the next row -->
-      <!-- <div class="break"></div> -->
 
       <div class="skills col-s-12 col-3">
+        <!-- Outline of web dev skills. Font Awesome icons used for each specific bit of tech -->
         <h2>Skills</h2>
         <ul>
           <li><i class="fab fa-html5"></i> HTML</li>
