--- a/blog.html
+++ b/blog.html
@@ -37,6 +37,7 @@
     </header>
 
     <main class="main-blog col-s-9 col-8">
+      <!-- Blog blurb component containing text. Repeated for each blog item on the pahe -->
       <div class="blog">
         <!-- blog thumbnail image. Repeated for each blog item on the page -->
         <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/66/SMPTE_Color_Bars.svg/1200px-SMPTE_Color_Bars.svg.png" alt="" class="blog-thumb">
