Updated colour styling & updated relative paths to root-relative

--- a/about.html
+++ b/about.html
@@ -12,23 +12,23 @@
     />
 
     <!-- NEED TO ADD SRI -->
-    <link rel="stylesheet" type="text/css" href="css/main.css" />
+    <link rel="stylesheet" type="text/css" href="/css/main.css" />
     <title>About - Mike Olivotto</title>
   </head>
   <body>
     <header>
       <nav>
-        <a href="index.html" class="logo">
+        <a href="/index.html" class="logo">
           <i class="fas fa-code" aria-label="Home"></i>
         </a>
         <ul>
-          <a href="about.html" title="About">
+          <a href="/about.html" title="About">
             <li>About</li>
           </a>
-          <a href="projects.html" title="Projects">
+          <a href="/projects.html" title="Projects">
             <li>Projects</li>
           </a>
-          <a href="blog.html" title="Blog">
+          <a href="/blog.html" title="Blog">
             <li>Blog</li>
           </a>
         </ul>
@@ -39,7 +39,7 @@
     <main class="main-about  col-s-9 col-8">
       <div>
         <!-- My profile image -->
-        <img src="img/mike-olivotto.jpg" alt="Mike Olivotto" class="col-3" id=""/> 
+        <img src="/img/mike-olivotto.jpg" alt="Mike Olivotto" class="col-3" id=""/> 
         <!-- Main section for the about-me introductory blurb -->
         <p class="">
           Hi! I'm Mike. 👋
@@ -58,7 +58,7 @@
       <div class="experience col-s-12 col-8">
         <!-- Outline of my professional experience, with sub-headers for each new job, and p tags for company and dates -->
         <h2>Professional Experience</h2>
-        <p id="resume">For a comprehensive work history, <a href="files/mike-olivotto-resume.pdf" download>download my resume</a> (PDF).</p>
+        <p id="resume">For a comprehensive work history, <a href="/files/mike-olivotto-resume.pdf" download>download my resume</a> (PDF).</p>
         <div class="work-exp">
           <div class="job">
             <h3>SEO Consultant</h3>
