--- a/blog.html
+++ b/blog.html
@@ -12,23 +12,23 @@
     />
 
     <!-- NEED TO ADD SRI -->
-    <link rel="stylesheet" type="text/css" href="css/main.css" />
+    <link rel="stylesheet" type="text/css" href="/css/main.css" />
     <title>Blog - Mike Olivotto</title>
   </head>
   <body>
     <header>
       <nav>
-        <a href="index.html" class="logo">
+        <a href="/index.html" class="logo">
           <i class="fas fa-code" aria-label="Home"></i>
         </a>
         <ul>
-          <a href="about.html" title="About">
+          <a href="/about.html" title="About">
             <li>About</li>
           </a>
-          <a href="projects.html" title="Projects">
+          <a href="/projects.html" title="Projects">
             <li>Projects</li>
           </a>
-          <a href="blog.html" title="Blog">
+          <a href="/blog.html" title="Blog">
             <li>Blog</li>
           </a>
         </ul>
@@ -40,34 +40,44 @@
       <!-- Blog blurb component containing text. Repeated for each blog item on the pahe -->
       <div class="blog">
         <!-- blog thumbnail image. Repeated for each blog item on the page -->
-        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/66/SMPTE_Color_Bars.svg/1200px-SMPTE_Color_Bars.svg.png" alt="" class="blog-thumb">
-        <h3>Sample Blog 1</h3>
+        <a href="/blog/sample-blog.html" class="blog-link">
+          <img src="/img/blog-img.png">
+          <h3>Sample Blog 1</h3>
+        </a>
         <p class="date-pub">Date published: XX/XX/2021</p>
-        <p class="extract">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        <p class="extract">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. <a href="/blog/sample-blog.html">[Read More]</a></p>
       </div>
       <div class="blog">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/66/SMPTE_Color_Bars.svg/1200px-SMPTE_Color_Bars.svg.png" alt="" class="blog-thumb">
-        <h3>Sample Blog 2</h3>
+        <a href="/blog/sample-blog.html" class="blog-link">
+          <img src="/img/blog-img.png">
+          <h3>Sample Blog 2</h3>
+        </a>
         <p class="date-pub">Date published: XX/XX/2021</p>
-        <p class="extract">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        <p class="extract">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. <a href="/blog/sample-blog.html">[Read More]</a></p>
       </div>
       <div class="blog">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/66/SMPTE_Color_Bars.svg/1200px-SMPTE_Color_Bars.svg.png" alt="" class="blog-thumb">
-        <h3>Sample Blog 3</h3>
+        <a href="/blog/sample-blog.html" class="blog-link">
+          <img src="/img/blog-img.png">
+          <h3>Sample Blog 3</h3>
+        </a>
         <p class="date-pub">Date published: XX/XX/2021</p>
-        <p class="extract">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        <p class="extract">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. <a href="/blog/sample-blog.html">[Read More]</a></p>
       </div>
       <div class="blog">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/66/SMPTE_Color_Bars.svg/1200px-SMPTE_Color_Bars.svg.png" alt="" class="blog-thumb">
-        <h3>Sample Blog 4</h3>
+        <a href="/blog/sample-blog.html" class="blog-link">
+          <img src="/img/blog-img.png">
+          <h3>Sample Blog 4</h3>
+        </a>
         <p class="date-pub">Date published: XX/XX/2021</p>
-        <p class="extract">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        <p class="extract">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. <a href="/blog/sample-blog.html">[Read More]</a></p>
       </div>
       <div class="blog">
-        <div class="blog-img"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/66/SMPTE_Color_Bars.svg/1200px-SMPTE_Color_Bars.svg.png" alt=""></div>
-        <h3>Sample Blog 5</h3>
+        <a href="/blog/sample-blog.html" class="blog-link">
+          <img src="/img/blog-img.png">
+          <h3>Sample Blog 5</h3>
+        </a>
         <p class="date-pub">Date published: XX/XX/2021</p>
-        <p class="extract">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        <p class="extract">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. <a href="/blog/sample-blog.html">[Read More]</a></p>
       </div>
     </main>
 
