--- a/projects.html
+++ b/projects.html
@@ -12,23 +12,23 @@
     />
 
     <!-- NEED TO ADD SRI -->
-    <link rel="stylesheet" type="text/css" href="css/main.css" />
+    <link rel="stylesheet" type="text/css" href="/css/main.css" />
     <title>Projects - Mike Olivotto</title>
   </head>
   <body>
     <header>
       <nav>
-        <a href="index.html" class="logo">
+        <a href="/index.html" class="logo">
           <i class="fas fa-code" aria-label="Home"></i>
         </a>
         <ul>
-          <a href="about.html" title="About">
+          <a href="/about.html" title="About">
             <li>About</li>
           </a>
-          <a href="projects.html" title="Projects">
+          <a href="/projects.html" title="Projects">
             <li>Projects</li>
           </a>
-          <a href="blog.html" title="Blog">
+          <a href="/blog.html" title="Blog">
             <li>Blog</li>
           </a>
         </ul>
