add sample blog post and refactor h1s from partials to main css

--- a/blog.html
+++ b/blog.html
@@ -41,7 +41,7 @@
       <div class="blog">
         <!-- blog thumbnail image. Repeated for each blog item on the page -->
         <a href="/blog/sample-blog.html" class="blog-link">
-          <img src="/img/blog-img.png">
+          <img src="/img/blog-img.png" alt="sample blog thumbnail">
           <h3>Sample Blog 1</h3>
         </a>
         <p class="date-pub">Date published: XX/XX/2021</p>
@@ -49,7 +49,7 @@
       </div>
       <div class="blog">
         <a href="/blog/sample-blog.html" class="blog-link">
-          <img src="/img/blog-img.png">
+          <img src="/img/blog-img.png" alt="sample blog thumbnail">
           <h3>Sample Blog 2</h3>
         </a>
         <p class="date-pub">Date published: XX/XX/2021</p>
@@ -57,7 +57,7 @@
       </div>
       <div class="blog">
         <a href="/blog/sample-blog.html" class="blog-link">
-          <img src="/img/blog-img.png">
+          <img src="/img/blog-img.png" alt="sample blog thumbnail">
           <h3>Sample Blog 3</h3>
         </a>
         <p class="date-pub">Date published: XX/XX/2021</p>
@@ -65,7 +65,7 @@
       </div>
       <div class="blog">
         <a href="/blog/sample-blog.html" class="blog-link">
-          <img src="/img/blog-img.png">
+          <img src="/img/blog-img.png" alt="sample blog thumbnail">
           <h3>Sample Blog 4</h3>
         </a>
         <p class="date-pub">Date published: XX/XX/2021</p>
@@ -73,7 +73,7 @@
       </div>
       <div class="blog">
         <a href="/blog/sample-blog.html" class="blog-link">
-          <img src="/img/blog-img.png">
+          <img src="/img/blog-img.png" alt="sample blog thumbnail">
           <h3>Sample Blog 5</h3>
         </a>
         <p class="date-pub">Date published: XX/XX/2021</p>
