Update image size on blog post + additional commenting

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
 
     <main class="main-home">
         <div class="intro">
+          <!-- header tags to introduce myself. styled separately from h1s and h2s on other pages -->
             <h1 id="homeh1">Mike Olivotto</h1>
             <h2 id="homeh2">Full Stack Web Developer from Sydney, Australia</h2>
         </div>
