--- a/projects.html
+++ b/projects.html
@@ -51,6 +51,7 @@
             alt="Random Seinfeld Quote Generator"
           />
           <div class="project-name">Random Seinfeld Quote Generator</div>
+          <!-- text to explain the project. Styled in the stylesheet to appear on hover -->
           <div class="overlay">
             <p>A random quote generator built using Bootstrap and React</p>
           </div>
