Add download icon to resume link

--- a/about.html
+++ b/about.html
@@ -58,7 +58,7 @@
       <div class="experience col-s-12 col-8">
         <!-- Outline of my professional experience, with sub-headers for each new job, and p tags for company and dates -->
         <h2>Professional Experience</h2>
-        <p id="resume">For a comprehensive work history, <a href="/files/mike-olivotto-resume.pdf" download>download my resume</a> (PDF).</p>
+        <p id="resume">For a comprehensive work history, <a href="/files/mike-olivotto-resume.pdf" download>download my resume (PDF) <i class="fas fa-download"></i></a>.</p>
         <div class="work-exp">
           <div class="job">
             <h3>SEO Consultant</h3>
