Try to break SRI with incorrect hash

--- a/index.html
+++ b/index.html
@@ -6,10 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- link to Font Awesome to use their icons -->
-    <link rel="stylesheet" href="//use.fontawesome.com/releases/v5.0.7/css/all.css">
+    <link rel="stylesheet" href="http://use.fontawesome.com/releases/v5.0.7/css/all.css" integrity="sha256-7ucoO85" crossorigin="anonymous">
 
     <!-- NEED TO ADD SRI -->
-    <link rel="stylesheet" type="text/css" href="/css/main.css">
+    <link rel="stylesheet" type="text/css" href="/css/main.css"
+      integrity="sha384-WJmua4vrlowiBpC/V68f8e7TKpO0hJOPk2eNG/ZKmD8+VYGR8Wqe9LgJHce5"
+      crossorigin="anonymous">
     <title>Mike Olivotto - Web Developer</title>
 
 
