--- a/blog.html
+++ b/blog.html
@@ -6,13 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- link to Font Awesome to use their icons -->
-    <link
-      rel="stylesheet"
-      href="//use.fontawesome.com/releases/v5.0.7/css/all.css"
-    />
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.7/css/all.css" integrity="sha256-7ucoO85H9jABOW1Yys6S9XBY6gxe5UZXnoQWCaNZ1S4= sha384-No+VI8Wwi7LzQn9F3FVzBXMxHH2DQpi1C2B8xrgG/EcPXRuAv1gUo8zA92+F+sEz sha512-OklCcBCIoF37PTVwdOPt+vhivH07WYW1aWQF4Q+To/YXAmECvkqMk0el7MQGwch4NN0o7320MLrAZTE3car/Nw==" crossorigin="anonymous">
 
-    <!-- NEED TO ADD SRI -->
-    <link rel="stylesheet" type="text/css" href="/css/main.css" />
+    <!-- Internal style stylesheet -->
+    <link rel="stylesheet" type="text/css" href="/css/main.css"
+      integrity="sha384-WJmua4vrlowiBpC/V68f8e7TKpO0hJOPk2eNG/ZKmD8+VYGR8Wqe9LgJHcu8DVe5"
+      crossorigin="anonymous">
     <title>Blog - Mike Olivotto</title>
   </head>
   <body>
@@ -73,7 +72,7 @@
       </div>
       <div class="blog">
         <a href="/blog/sample-blog.html" class="blog-link">
-          <img src="/img/blog-img.png" alt="sample blog thumbnail">
+          <img src="/img/blog-img.png">
           <h3>Sample Blog 5</h3>
         </a>
         <p class="date-pub">Date published: XX/XX/2021</p>
