--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- link to Font Awesome to use their icons -->
-    <link rel="stylesheet" href="http://use.fontawesome.com/releases/v5.0.7/css/all.css" integrity="sha256-7ucoO85" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.7/css/all.css" integrity="sha256-7ucoO85H9jABOW1Yys6S9XBY6gxe5UZXnoQWCaNZ1S4= sha384-No+VI8Wwi7LzQn9F3FVzBXMxHH2DQpi1C2B8xrgG/EcPXRuAv1gUo8zA92+F+sEz sha512-OklCcBCIoF37PTVwdOPt+vhivH07WYW1aWQF4Q+To/YXAmECvkqMk0el7MQGwch4NN0o7320MLrAZTE3car/Nw==" crossorigin="anonymous">
 
-    <!-- NEED TO ADD SRI -->
+    <!-- Internal style stylesheet -->
     <link rel="stylesheet" type="text/css" href="/css/main.css"
-      integrity="sha384-WJmua4vrlowiBpC/V68f8e7TKpO0hJOPk2eNG/ZKmD8+VYGR8Wqe9LgJHce5"
+      integrity="sha384-WJmua4vrlowiBpC/V68f8e7TKpO0hJOPk2eNG/ZKmD8+VYGR8Wqe9LgJHcu8DVe5"
       crossorigin="anonymous">
     <title>Mike Olivotto - Web Developer</title>
 
