--- a/about.html
+++ b/about.html
@@ -12,6 +12,14 @@
     <link rel="stylesheet" type="text/css" href="/css/main.css"
       integrity="sha384-WJmua4vrlowiBpC/V68f8e7TKpO0hJOPk2eNG/ZKmD8+VYGR8Wqe9LgJHcu8DVe5"
       crossorigin="anonymous">
+
+      <link rel="icon" href="/favicon/favicon-16x16.png" type="image/gif" sizes="16x16">
+      <link rel="icon" href="/favicon/favicon-32x32.png" type="image/gif" sizes="32x32">
+
+
+
+
+
     <title>About - Mike Olivotto</title>
   </head>
   <body>
@@ -50,7 +58,7 @@
           Technology and the digital world is where I'm most comfortable. Continuous learning and development is my modus operandi. I'm currently studying Web Development and I'm most interested in building interactive web applications.
         </p>
         <p>
-          Contact me on <a href="https://www.linkedin.com/in/mikeolivotto/" target="_blank">LinkedIn</a>, follow me on <a href="https://github.com/mikeolivotto" target="_blank">GitHub</a>, or check our some of my <a href="projects.html">projects</a>.
+          Contact me on <a href="https://www.linkedin.com/in/mikeolivotto/" target="_blank">LinkedIn</a>, follow me on <a href="https://github.com/mikeolivotto" target="_blank">GitHub</a>, or check out some of my <a href="projects.html">projects</a>.
         </p>
       </div>
 
