--- a/blog.html
+++ b/blog.html
@@ -12,6 +12,9 @@
     <link rel="stylesheet" type="text/css" href="/css/main.css"
       integrity="sha384-WJmua4vrlowiBpC/V68f8e7TKpO0hJOPk2eNG/ZKmD8+VYGR8Wqe9LgJHcu8DVe5"
       crossorigin="anonymous">
+
+      <link rel="icon" href="/favicon/favicon-16x16.png" type="image/gif" sizes="16x16">
+      <link rel="icon" href="/favicon/favicon-32x32.png" type="image/gif" sizes="32x32">
     <title>Blog - Mike Olivotto</title>
   </head>
   <body>
