--- a/projects.html
+++ b/projects.html
@@ -10,7 +10,8 @@
 
     <!-- Internal style stylesheet -->
     <link rel="stylesheet" type="text/css" href="/css/main.css"
-      integrity="sha384-U2InUUayquVpUFIItMHkb7xLIfdhbh/cdXyMfX+XnIBNn3JFKZn5XNihDlnqtTdC"
+      integrity="sha256-rWjOax6Q/Pk12PZmlRbNMqOROD1/D9rU+lNvXF943w0= sha384-U2InUUayquVpUFIItMHkb7xLIfdhbh/cdXyMfX+XnIBNn3JFKZn5XNihDlnqtTdC
+      sha512-aapfsGMfF7+8NJKgewe+2Ku5j+GgxYzhCOhmBmQSx6/m3Ljc9H5ZzJQa6IIi/Z9X6+NFbPUg+uaZTRnGe/V1YQ=="
       crossorigin="anonymous">
 
       <link rel="icon" href="/favicon/favicon-16x16.png" type="image/gif" sizes="16x16">
@@ -18,6 +19,7 @@
     <title>Projects - Mike Olivotto</title>
   </head>
   <body>
+    <!-- header containing logo and nav bar -->
     <header>
       <nav>
         <a href="/index.html" class="logo">
@@ -45,6 +47,7 @@
             <p>To see more of my work, visit my GitHub or CodePen pages</p>
         </div>
 
+        <!-- Each project component is wrapped by an anchor tag to be a clicable link -->
       <a href="https://codepen.io/mike-olivotto/full/rNxrEYO" target="_blank">
         <div class="project">
           <!-- Project image below. Replicated for every 'project' element -->
@@ -85,6 +88,7 @@
         </div>
       </a>
     </main>
+    <!-- footer component -->
 
     <footer>
       <a href="https://www.linkedin.com/in/mikeolivotto/" target="_blank">
