--- a/about.html
+++ b/about.html
@@ -10,7 +10,8 @@
 
     <!-- Internal style stylesheet -->
     <link rel="stylesheet" type="text/css" href="/css/main.css"
-      integrity="sha384-U2InUUayquVpUFIItMHkb7xLIfdhbh/cdXyMfX+XnIBNn3JFKZn5XNihDlnqtTdC"
+      integrity="sha256-rWjOax6Q/Pk12PZmlRbNMqOROD1/D9rU+lNvXF943w0= sha384-U2InUUayquVpUFIItMHkb7xLIfdhbh/cdXyMfX+XnIBNn3JFKZn5XNihDlnqtTdC
+      sha512-aapfsGMfF7+8NJKgewe+2Ku5j+GgxYzhCOhmBmQSx6/m3Ljc9H5ZzJQa6IIi/Z9X6+NFbPUg+uaZTRnGe/V1YQ=="
       crossorigin="anonymous">
 
       <link rel="icon" href="/favicon/favicon-16x16.png" type="image/gif" sizes="16x16">
@@ -23,6 +24,8 @@
     <title>About - Mike Olivotto</title>
   </head>
   <body>
+    <!-- header containing logo and nav bar -->
+
     <header>
       <nav>
         <a href="/index.html" class="logo">
@@ -112,6 +115,7 @@
         </ul>
       </div>
     </main>
+    <!-- footer component -->
 
     <footer>
 
