--- a/blog.html
+++ b/blog.html
@@ -10,7 +10,8 @@
 
     <!-- Internal style stylesheet -->
     <link rel="stylesheet" type="text/css" href="/css/main.css"
-      integrity="sha384-U2InUUayquVpUFIItMHkb7xLIfdhbh/cdXyMfX+XnIBNn3JFKZn5XNihDlnqtTdC"
+      integrity="sha256-rWjOax6Q/Pk12PZmlRbNMqOROD1/D9rU+lNvXF943w0= sha384-U2InUUayquVpUFIItMHkb7xLIfdhbh/cdXyMfX+XnIBNn3JFKZn5XNihDlnqtTdC
+      sha512-aapfsGMfF7+8NJKgewe+2Ku5j+GgxYzhCOhmBmQSx6/m3Ljc9H5ZzJQa6IIi/Z9X6+NFbPUg+uaZTRnGe/V1YQ=="
       crossorigin="anonymous">
 
       <link rel="icon" href="/favicon/favicon-16x16.png" type="image/gif" sizes="16x16">
@@ -18,6 +19,8 @@
     <title>Blog - Mike Olivotto</title>
   </head>
   <body>
+    <!-- header containing logo and nav bar -->
+
     <header>
       <nav>
         <a href="/index.html" class="logo">
@@ -82,6 +85,7 @@
         <p class="extract">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. <a href="/blog/sample-blog.html">[Read More]</a></p>
       </div>
     </main>
+    <!-- footer component -->
 
     <footer>
       <a href="https://www.linkedin.com/in/mikeolivotto/" target="_blank">
