Update HTML based on validator comments

--- a/about.html
+++ b/about.html
@@ -32,15 +32,11 @@
           <i class="fas fa-code" aria-label="Home"></i>
         </a>
         <ul>
-          <a href="/about.html" title="About">
-            <li>About</li>
-          </a>
-          <a href="/projects.html" title="Projects">
-            <li>Projects</li>
-          </a>
-          <a href="/blog.html" title="Blog">
-            <li>Blog</li>
-          </a>
+          <li><a href="/about.html" title="About">About</a></li>
+
+          <li><a href="/projects.html" title="Projects">Projects</a></li>
+
+          <li><a href="/blog.html" title="Blog">Blog</a></li>
         </ul>
       </nav>
       <h1>About me</h1>
@@ -49,7 +45,7 @@
     <main class="main-about  col-s-9 col-8">
       <div>
         <!-- My profile image -->
-        <img src="/img/mike-olivotto.jpg" alt="Mike Olivotto" class="col-3" id=""/> 
+        <img src="/img/mike-olivotto.jpg" alt="Mike Olivotto" class="col-3"/> 
         <!-- Main section for the about-me introductory blurb -->
         <p class="">
           Hi! I'm Mike. 👋
@@ -118,24 +114,22 @@
     <!-- footer component -->
 
     <footer>
-
-        <a href="https://www.linkedin.com/in/mikeolivotto/" target="_blank">
-          <div class="footer-icons" aria-label="LinkedIn">
-            <i class="fab fa-linkedin"></i>
-          </div>
-        </a>
-        <a href="https://github.com/mikeolivotto" target="_blank">
-          <div class="footer-icons" aria-label="GitHub">
-            <i class="fab fa-github"></i>
-          </div>
-        </a>
-        <a href="https://codepen.io/mike-olivotto" target="_blank">
-          <div class="footer-icons" aria-label="CodePen">
-            <i class="fab fa-codepen"></i>
-          </div>
-        </a>
-        <div> | mike@mikeolivotto.com</div>
-
+      <a href="https://www.linkedin.com/in/mikeolivotto/" target="_blank">
+        <div class="footer-icons">
+          <i class="fab fa-linkedin" aria-label="LinkedIn"></i>
+        </div>
+      </a>
+      <a href="https://github.com/mikeolivotto" target="_blank">
+        <div class="footer-icons">
+          <i class="fab fa-github" aria-label="GitHub"></i>
+        </div>
+      </a>
+      <a href="https://codepen.io/mike-olivotto" target="_blank">
+        <div class="footer-icons">
+          <i class="fab fa-codepen" aria-label="CodePen"></i>
+        </div>
+      </a>
+      <div>| mike@mikeolivotto.com</div>
     </footer>
   </body>
 </html>
