--- a/projects.html
+++ b/projects.html
@@ -26,15 +26,11 @@
           <i class="fas fa-code" aria-label="Home"></i>
         </a>
         <ul>
-          <a href="/about.html" title="About">
-            <li>About</li>
-          </a>
-          <a href="/projects.html" title="Projects">
-            <li>Projects</li>
-          </a>
-          <a href="/blog.html" title="Blog">
-            <li>Blog</li>
-          </a>
+          <li><a href="/about.html" title="About">About</a></li>
+
+          <li><a href="/projects.html" title="Projects">Projects</a></li>
+
+          <li><a href="/blog.html" title="Blog">Blog</a></li>
         </ul>
       </nav>
       <h1>Projects</h1>
@@ -92,21 +88,21 @@
 
     <footer>
       <a href="https://www.linkedin.com/in/mikeolivotto/" target="_blank">
-        <div class="footer-icons" aria-label="LinkedIn">
-          <i class="fab fa-linkedin"></i>
+        <div class="footer-icons">
+          <i class="fab fa-linkedin" aria-label="LinkedIn"></i>
         </div>
       </a>
       <a href="https://github.com/mikeolivotto" target="_blank">
-        <div class="footer-icons" aria-label="GitHub">
-          <i class="fab fa-github"></i>
+        <div class="footer-icons">
+          <i class="fab fa-github" aria-label="GitHub"></i>
         </div>
       </a>
       <a href="https://codepen.io/mike-olivotto" target="_blank">
-        <div class="footer-icons" aria-label="CodePen">
-          <i class="fab fa-codepen"></i>
+        <div class="footer-icons">
+          <i class="fab fa-codepen" aria-label="CodePen"></i>
         </div>
       </a>
-      <div> | mike@mikeolivotto.com</div>
+      <div>| mike@mikeolivotto.com</div>
     </footer>
   </body>
 </html>
