--- a/blog.html
+++ b/blog.html
@@ -27,15 +27,11 @@
           <i class="fas fa-code" aria-label="Home"></i>
         </a>
         <ul>
-          <a href="/about.html" title="About">
-            <li>About</li>
-          </a>
-          <a href="/projects.html" title="Projects">
-            <li>Projects</li>
-          </a>
-          <a href="/blog.html" title="Blog">
-            <li>Blog</li>
-          </a>
+          <li><a href="/about.html" title="About">About</a></li>
+
+          <li><a href="/projects.html" title="Projects">Projects</a></li>
+
+          <li><a href="/blog.html" title="Blog">Blog</a></li>
         </ul>
       </nav>
       <h1>Blog</h1>
@@ -78,7 +74,7 @@
       </div>
       <div class="blog">
         <a href="/blog/sample-blog.html" class="blog-link">
-          <img src="/img/blog-img.png">
+          <img src="/img/blog-img.png" alt="sample blog thumbnail">
           <h3>Sample Blog 5</h3>
         </a>
         <p class="date-pub">Date published: XX/XX/2021</p>
@@ -89,21 +85,21 @@
 
     <footer>
       <a href="https://www.linkedin.com/in/mikeolivotto/" target="_blank">
-        <div class="footer-icons" aria-label="LinkedIn">
-          <i class="fab fa-linkedin"></i>
+        <div class="footer-icons">
+          <i class="fab fa-linkedin" aria-label="LinkedIn"></i>
         </div>
       </a>
       <a href="https://github.com/mikeolivotto" target="_blank">
-        <div class="footer-icons" aria-label="GitHub">
-          <i class="fab fa-github"></i>
+        <div class="footer-icons">
+          <i class="fab fa-github" aria-label="GitHub"></i>
         </div>
       </a>
       <a href="https://codepen.io/mike-olivotto" target="_blank">
-        <div class="footer-icons" aria-label="CodePen">
-          <i class="fab fa-codepen"></i>
+        <div class="footer-icons">
+          <i class="fab fa-codepen" aria-label="CodePen"></i>
         </div>
       </a>
-      <div> | mike@mikeolivotto.com</div>
+      <div>| mike@mikeolivotto.com</div>
     </footer>
   </body>
 </html>
