--- a/index.html
+++ b/index.html
@@ -1,73 +1,86 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- link to Font Awesome to use their icons -->
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.7/css/all.css" integrity="sha256-7ucoO85H9jABOW1Yys6S9XBY6gxe5UZXnoQWCaNZ1S4= sha384-No+VI8Wwi7LzQn9F3FVzBXMxHH2DQpi1C2B8xrgG/EcPXRuAv1gUo8zA92+F+sEz sha512-OklCcBCIoF37PTVwdOPt+vhivH07WYW1aWQF4Q+To/YXAmECvkqMk0el7MQGwch4NN0o7320MLrAZTE3car/Nw==" crossorigin="anonymous">
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.0.7/css/all.css"
+      integrity="sha256-7ucoO85H9jABOW1Yys6S9XBY6gxe5UZXnoQWCaNZ1S4= sha384-No+VI8Wwi7LzQn9F3FVzBXMxHH2DQpi1C2B8xrgG/EcPXRuAv1gUo8zA92+F+sEz sha512-OklCcBCIoF37PTVwdOPt+vhivH07WYW1aWQF4Q+To/YXAmECvkqMk0el7MQGwch4NN0o7320MLrAZTE3car/Nw=="
+      crossorigin="anonymous"
+    />
 
     <!-- Internal style stylesheet -->
-    <link rel="stylesheet" type="text/css" href="/css/main.css"
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="/css/main.css"
       integrity="sha256-rWjOax6Q/Pk12PZmlRbNMqOROD1/D9rU+lNvXF943w0= sha384-U2InUUayquVpUFIItMHkb7xLIfdhbh/cdXyMfX+XnIBNn3JFKZn5XNihDlnqtTdC
       sha512-aapfsGMfF7+8NJKgewe+2Ku5j+GgxYzhCOhmBmQSx6/m3Ljc9H5ZzJQa6IIi/Z9X6+NFbPUg+uaZTRnGe/V1YQ=="
-      crossorigin="anonymous">
+      crossorigin="anonymous"
+    />
 
-      <link rel="icon" href="/favicon/favicon-16x16.png" type="image/gif" sizes="16x16">
-      <link rel="icon" href="/favicon/favicon-32x32.png" type="image/gif" sizes="32x32">
+    <link
+      rel="icon"
+      href="/favicon/favicon-16x16.png"
+      type="image/gif"
+      sizes="16x16"
+    />
+    <link
+      rel="icon"
+      href="/favicon/favicon-32x32.png"
+      type="image/gif"
+      sizes="32x32"
+    />
     <title>Mike Olivotto - Web Developer</title>
-
-
-</head>
-<body>
+  </head>
+  <body>
     <!-- header containing logo and nav bar -->
 
     <header>
-        <nav>
-            <a href="/index.html" class="logo">
-                <i class="fas fa-code" aria-label="Home"></i>
-            </a>
-            <ul>
-                <a href="/about.html" title="About">
-                    <li>About</li>
-                </a>
-                <a href="/projects.html" title="Projects">
-                    <li>Projects</li>
-                </a>
-                <a href="/blog.html" title="Blog">
-                    <li>Blog</li>
-                </a>
-            </ul>
-        </nav>
+      <nav>
+        <a href="/index.html" class="logo">
+          <i class="fas fa-code" aria-label="Home"></i>
+        </a>
+        <ul>
+          <li><a href="/about.html" title="About">About</a></li>
+
+          <li><a href="/projects.html" title="Projects">Projects</a></li>
+
+          <li><a href="/blog.html" title="Blog">Blog</a></li>
+        </ul>
+      </nav>
     </header>
 
     <main class="main-home">
-        <div class="intro">
-          <!-- header tags to introduce myself. styled separately from h1s and h2s on other pages -->
-            <h1 id="homeh1">Mike Olivotto</h1>
-            <h2 id="homeh2">Full Stack Web Developer from Sydney, Australia</h2>
-        </div>
+      <div class="intro">
+        <!-- header tags to introduce myself. styled separately from h1s and h2s on other pages -->
+        <h1 id="homeh1">Mike Olivotto</h1>
+        <h2 id="homeh2">Full Stack Web Developer from Sydney, Australia</h2>
+      </div>
     </main>
 
     <!-- footer component -->
     <footer>
-        <a href="https://www.linkedin.com/in/mikeolivotto/" target="_blank">
-          <div class="footer-icons" aria-label="LinkedIn">
-            <i class="fab fa-linkedin"></i>
-          </div>
-        </a>
-        <a href="https://github.com/mikeolivotto" target="_blank">
-          <div class="footer-icons" aria-label="GitHub">
-            <i class="fab fa-github"></i>
-          </div>
-        </a>
-        <a href="https://codepen.io/mike-olivotto" target="_blank">
-          <div class="footer-icons" aria-label="CodePen">
-            <i class="fab fa-codepen"></i>
-          </div>
-        </a>
-        <div> | mike@mikeolivotto.com</div>
-      </footer>
-</body>
+      <a href="https://www.linkedin.com/in/mikeolivotto/" target="_blank">
+        <div class="footer-icons">
+          <i class="fab fa-linkedin" aria-label="LinkedIn"></i>
+        </div>
+      </a>
+      <a href="https://github.com/mikeolivotto" target="_blank">
+        <div class="footer-icons">
+          <i class="fab fa-github" aria-label="GitHub"></i>
+        </div>
+      </a>
+      <a href="https://codepen.io/mike-olivotto" target="_blank">
+        <div class="footer-icons">
+          <i class="fab fa-codepen" aria-label="CodePen"></i>
+        </div>
+      </a>
+      <div>| mike@mikeolivotto.com</div>
+    </footer>
+  </body>
 </html>
